--- a/index.html
+++ b/index.html
@@ -7,6 +7,19 @@
   </head>
   <body>
     Weather Forecast for Denver
+    <img id="current-icon">
+      <div id="current-weather-details">
+           <a id="current-humidity">--</a>
+           <a id="current-pressure">--</a>
+           <a id="current-uvIndex">--</a>
+           <img id="temperature-icon">
+           <a id="current-temperature">--</a>
+           <a id="current-wind-bearing">--</a>
+           <a id="current-wind-speed">--</a>
+           <button id="getWeather" onclick="getWeather()">Get Current Weather!</button>
+      </div>
+      <p id="weather-summary"></p>
+
 
 
 
